--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,4 @@
 @import "./components/backdrop";
 @import "./components/is_hidden";
 @import "./components/modal";
+@import "./components/container";
