--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,9 +1,7 @@
 .container {
   width: 100%;
-  min-width: 320px;
-  margin: 0 auto;
+  margin: auto auto;
   padding: 0 15px;
-  justify-content: center;
 
   @media (min-width: $mobile) {
     width: $mobile;
