--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,41 +1,30 @@
 .header {
   border-bottom: 1px solid #ececec;
   font-weight: 500;
+  font-size: 14px;
 
   &__content {
     display: flex;
-    position: relative;
-    justify-content: space-between;
     align-items: center;
-    padding: 16px 0;
-
-    @media (min-width: $tablet) {
-      padding: 26px 0;
-    }
-    @media (min-width: $desktop) {
-      justify-content: start;
-    }
   }
   &__icon--mobile-menu {
-    position: absolute;
-    right: 15px;
+    background-color: transparent;
+    display: inline-flex;
+    cursor: pointer;
+    border: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     @media (min-width: $tablet) {
       display: none;
     }
   }
-  &__contact-wrapper {
-    display: none;
-    @media (min-width: $tablet) {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
 
-    @media (min-width: $desktop) {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-    }
+  @media (min-width: $desktop) {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   }
 }
 
@@ -44,10 +33,16 @@
   font-weight: 700;
   color: $project-main;
   font-size: 24px;
+  padding: 16px 0;
+  margin-right: auto;
 
+  @media (min-width: $tablet) {
+    padding: 26px 0;
+    margin-right: 88px;
+  }
   @media (min-width: $desktop) {
-    font-size: 26px;
     margin-right: 93px;
+    padding: 25px 0;
   }
 
   &--black {
@@ -59,11 +54,13 @@
   }
 }
 
-.header__nav {
+.header__nav-list {
+  list-style: none;
   display: none;
   color: $project-black;
   text-decoration: none;
-  transition: var(--transition-duration);
+  padding: 0;
+  transition: 250ms;
   transition-timing-function: $cubic;
 
   @media (min-width: $tablet) {
@@ -98,43 +95,64 @@
   & a:hover,
   & a:focus {
     color: $project-main;
+    transition: color 250ms $cubic;
   }
 }
 
 .header__contact {
-  display: none;
   position: relative;
   color: $grey;
   fill: $grey;
+  font-size: 12px;
   letter-spacing: 0.02em;
   text-decoration: none;
   line-height: 16px;
   transition: 250ms;
   transition-timing-function: $cubic;
 
-  @media (min-width: $tablet) {
-    display: flex;
-  }
   @media (min-width: $desktop) {
+    font-size: 14px;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    align-content: center;
+    gap: 10px;
   }
 
-  & svg {
-    transition: 250ms;
-    transition-timing-function: $cubic;
+  &-wrapper {
+    display: none;
+    list-style: none;
+
+    @media (min-width: $tablet) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: 84px;
+    }
+
+    @media (min-width: $desktop) {
+      margin: 0 auto;
+      padding-left: 0px;
+      gap: 30px;
+      align-items: center;
+    }
   }
 
-  &:focus,
-  &:hover {
-    color: $project-main;
-    fill: $project-main;
-  }
+  &-item {
+    margin-top: 8px;
 
-  &:hover svg {
-    color: $project-main;
-    fill: $project-main;
+    &:focus,
+    &:hover {
+      color: $project-main;
+      fill: $project-main;
+      transition: color 250ms $cubic;
+    }
+
+    &:hover svg {
+      color: $project-main;
+      fill: $project-main;
+      transition: color 250ms $cubic;
+    }
+    @media (min-width: $desktop) {
+      margin: 0 auto;
+    }
   }
 
   &:hover,
@@ -142,44 +160,58 @@
     color: $project-main;
     transition: 250ms;
     transition-timing-function: $cubic;
+    fill: $project-main;
   }
 }
 
 .header__icon {
+  display: inline;
   fill: $grey;
-  margin-right: 10px;
   height: 16px;
   align-items: center;
   transition-property: fill;
   transition: 250ms;
   transition-timing-function: $cubic;
+
   &--mail {
     fill: $grey;
     padding-top: 1px;
+
+    @media (min-width: $tablet) {
+      margin-right: 6px;
+      width: 14px;
+      height: 10px;
+    }
+    @media (min-width: $desktop) {
+      width: 12px;
+      height: 16px;
+    }
   }
 
   &--smartphone {
-    position: absolute;
+    padding-top: 8px;
+
+    @media (min-width: $tablet) {
+      margin-right: 10px;
+      width: 10px;
+      height: 14px;
+    }
+    @media (min-width: $desktop) {
+      width: 10px;
+      height: 16px;
+      padding: 0;
+      margin: 0 auto;
+    }
+  }
+  &:hover {
+    color: $project-main;
+    fill: $project-main;
+    transition: 250ms;
+    transition-timing-function: $cubic;
   }
 }
 
-// @media (max-width: 767px) {
-//   .header {
-//     height: 60px;
-//     width: 100%;
-//   }
-//   .header__nav {
-//     display: none;
-//   }
-//   .header__contact {
-//     display: none;
-//   }
-//   .header__icon--mobile-menu {
-//     fill: $black;
-//     padding-left: 15px;
-//   }
-//   .logo {
-//     margin: 0;
-//     font-size: 24px;
-//   }
-// }
+.header__contact--smartphone a:hover .header__contact {
+  color: $project-main;
+  transition: color 250ms $cubic;
+}
