--- a/sass/components/_main-section.scss
+++ b/sass/components/_main-section.scss
@@ -40,6 +40,7 @@
   background-color: $white;
   margin: 0 auto;
   padding-bottom: 94px;
+  display: none;
 
   &__content {
     list-style: none;
