--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -1,7 +1,8 @@
 .banner {
   background-color: #c4c4c4;
   margin: 0 auto;
-  padding: 118px 0;
+  padding-top: 118px;
+  padding-bottom: 118px;
   max-width: 1600px;
 
   &__header {
@@ -15,7 +16,7 @@
     text-align: center;
 
     @media screen and (min-width: $mobile) {
-      width: 320px;
+      width: 360px;
       margin-left: auto;
       margin-right: auto;
     }
@@ -25,6 +26,7 @@
     @media screen and (min-width: $desktop) {
       font-size: 44px;
       line-height: calc(60 / 44);
+      width: 696px;
     }
   }
 }
