--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,7 +1,8 @@
 .container {
   width: 100%;
   margin: auto auto;
-  padding: 0 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 
   @media (min-width: $mobile) {
     width: $mobile;
