--- a/sass/components/_main-section.scss
+++ b/sass/components/_main-section.scss
@@ -11,9 +11,9 @@
     flex-wrap: nowrap;
   }
 
-  &__item {
-    // margin-bottom: 30px;
-  }
+  // &__item {
+  //   // margin-bottom: 30px;
+  // }
 
   &__image {
     margin: auto;
