--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -4,12 +4,15 @@
   padding-top: 118px;
   padding-bottom: 118px;
   max-width: 1600px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/home/banner_img_s.jpg);
-  background-size: cover;
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
@@ -64,7 +67,7 @@
     text-transform: uppercase;
     text-align: center;
 
-    @media screen and (min-width: $mobile) {
+    @media (min-width: $mobile) {
       width: 360px;
       margin-left: auto;
       margin-right: auto;
