--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -1,8 +1,8 @@
 .banner {
   background-color: #c4c4c4;
-  margin: 0 auto;
   padding-top: 118px;
   padding-bottom: 118px;
+  margin: 0 auto;
   max-width: 1600px;
   background-repeat: no-repeat;
   background-position: center;
@@ -41,6 +41,7 @@
     }
   }
   @media (min-width: $desktop) {
+    padding: 200px 0;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
@@ -68,17 +69,17 @@
     text-align: center;
 
     @media (min-width: $mobile) {
-      width: 360px;
+      max-width: 360px;
       margin-left: auto;
       margin-right: auto;
     }
 
-    @media (min-width: $tablet) {
-    }
+    // @media (min-width: $tablet) {
+    // }
     @media screen and (min-width: $desktop) {
       font-size: 44px;
       line-height: calc(60 / 44);
-      width: 696px;
+      max-width: 696px;
     }
   }
 }
