--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -3,13 +3,39 @@
   font-size: 16px;
   margin: 0 auto;
 
+  &__section-header {
+    padding-top: 60px;
+    padding-bottom: 30px;
+
+    @media (min-width: $desktop) {
+      padding-top: 94px;
+      padding-bottom: 50px;
+    }
+  }
+
+  &__item {
+    width: 450px;
+
+    @media (min-width: $tablet) {
+      width: 354px;
+    }
+
+    @media (min-width: $desktop) {
+      width: 270px;
+    }
+  }
+
   &__list {
     list-style: none;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 30px;
-    padding-top: 50px;
-    padding-left: 0;
+    padding: 0 0 60px 0;
+    margin: 0 auto;
+    @media (min-width: $desktop) {
+      padding-bottom: 94px;
+    }
   }
 
   &__member {
@@ -22,6 +48,7 @@
 
   &__image {
     display: block;
+    margin: 0 auto;
   }
 
   &__header {
@@ -49,12 +76,13 @@
 
   &__social-links {
     list-style: none;
-    fill: $grey;
+    fill: $icon-grey;
     padding-left: 32px;
     padding-right: 32px;
     padding-bottom: 30px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 10px;
     align-content: center;
     margin: 0 auto;
   }
@@ -78,22 +106,5 @@
 
   &__icon {
     margin-top: 4px;
-  }
-}
-
-@media (max-width: 767px) {
-  .team {
-    width: 100%;
-
-    &__list {
-      flex-direction: column;
-      align-items: center;
-    }
-    &__member {
-      width: 100vw;
-    }
-    &__social-links {
-      justify-content: center;
-    }
   }
 }
