--- a/sass/utils/_global.scss
+++ b/sass/utils/_global.scss
@@ -20,8 +20,7 @@ h2 {
   font-size: 36px;
   line-height: 1;
   letter-spacing: 0.03em;
-  display: flex;
-  justify-content: center;
+  text-align: center;
   margin: 0 auto;
 }
 
