--- a/sass/components/_main-section.scss
+++ b/sass/components/_main-section.scss
@@ -11,16 +11,28 @@
     flex-wrap: nowrap;
   }
 
-  // &__item {
-  //   // margin-bottom: 30px;
-  // }
+  &__item {
+    width: 290px;
+    @media (min-width: $mobile) {
+      width: 450px;
+    }
+    @media (min-width: $tablet) {
+      width: 354px;
+    }
+    @media (min-width: $desktop) {
+      width: 270px;
+    }
+  }
 
   &__image {
     margin: auto;
-    width: 450px;
+    width: 290px;
     height: 120px;
     background-color: $background-white;
 
+    @media (min-width: $mobile) {
+      width: 450px;
+    }
     @media (min-width: $tablet) {
       width: 354px;
     }
@@ -31,7 +43,11 @@
 
   &__svg {
     padding-top: 25px;
-    padding-left: 190px;
+    padding-left: 110px;
+
+    @media (min-width: $mobile) {
+      padding-left: 190px;
+    }
 
     @media (min-width: $tablet) {
       padding-left: 142px;
@@ -47,8 +63,11 @@
     letter-spacing: 0.03em;
     color: $grey;
     margin: 0 auto;
-    width: 450px;
+    width: 290px;
 
+    @media (min-width: $mobile) {
+      width: 450px;
+    }
     @media (min-width: $tablet) {
       width: 354px;
     }
