--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -15,7 +15,11 @@
 
   &__item {
     margin: 0 auto;
-    width: 450px;
+    width: 290px;
+
+    @media (min-width: $mobile) {
+      width: 450px;
+    }
 
     @media (min-width: $tablet) {
       width: 354px;
@@ -50,6 +54,7 @@
   &__image {
     display: block;
     margin: 0 auto;
+    object-fit: cover;
   }
 
   &__header {
@@ -102,6 +107,8 @@
     &:focus {
       fill: $white;
       background-color: $project-main;
+      transition-duration: 250ms;
+      transition-timing-function: $cubic;
     }
   }
 
