--- a/sass/utils/_global.scss
+++ b/sass/utils/_global.scss
@@ -32,8 +32,13 @@ h2 {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media (min-width: $desktop) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 h1 {
