--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,13 +1,49 @@
 .footer {
   background-color: $background;
   color: #fff;
-  padding: 57px 0;
+
+  &__contact-block {
+    padding: 60px 0;
+  }
+
+  &-logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    color: $project-main;
+    font-size: 24px;
+    padding-bottom: 20px;
+    margin: 0 auto;
+
+    @media (min-width: $tablet) {
+      padding: 26px 0;
+      margin-right: 88px;
+    }
+    @media (min-width: $desktop) {
+      margin-right: 93px;
+      padding: 25px 0;
+    }
+
+    &--black {
+      color: $black;
+    }
+
+    &--white {
+      color: $white;
+    }
+  }
 
   &__content {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    padding-bottom: 60px;
+
+    @media (min-width: $tablet) {
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 144px;
+    }
 
     @media (min-width: $desktop) {
       flex-direction: row;
@@ -47,7 +83,7 @@
   }
 
   &__social {
-    padding-top: 12px;
+    padding-bottom: 60px;
   }
 
   &__header {
@@ -114,7 +150,9 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    margin-right: 12px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 20px;
     outline: none;
     transition: 250ms $cubic;
 
