--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,3 +14,4 @@
 @import "./components/is_hidden";
 @import "./components/modal";
 @import "./components/container";
+@import "./components/services";
