--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,7 +3,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
+  width: 290px;
+
+  @media (min-width: $mobile) {
+    width: 450px;
+  }
+
+  @media (min-width: $desktop) {
+    width: 528px;
+  }
   background-color: $white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -34,10 +42,14 @@
   &__header {
     font-weight: 700;
     font-size: 20px;
-    line-height: 23px;
+    line-height: 30px;
+
+    @media (min-width: $desktop) {
+      line-height: 23px;
+    }
     text-align: center;
     letter-spacing: 0.03em;
-    padding-top: 40px;
+    padding: 40px 40px 0 40px;
     margin-bottom: 12px;
   }
 
@@ -52,7 +64,15 @@
   &__input {
     position: relative;
     height: 40px;
-    width: 404px;
+    width: 210px;
+
+    @media (min-width: $mobile) {
+      width: 370px;
+    }
+    @media (min-width: $desktop) {
+      width: 404x;
+    }
+
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding-left: 42px;
@@ -64,7 +84,15 @@
     &--textarea {
       resize: none;
       height: inherit;
-      width: 430px;
+      width: 210px;
+
+      @media (min-width: $mobile) {
+        width: 370px;
+      }
+      @media (min-width: $desktop) {
+        width: 430x;
+      }
+
       font-size: 12px;
       letter-spacing: 00.01em;
       color: rgba(117, 117, 117, 0.8);
@@ -116,6 +144,13 @@
     letter-spacing: 0.03em;
     color: #757575;
 
+    &-paragraph {
+      font-size: 12px;
+
+      @media (min-width: $desktop) {
+        font-size: 14px;
+      }
+    }
     &--link {
       color: $project-main;
       text-decoration: underline;
