--- a/sass/components/_portfolio_cards.scss
+++ b/sass/components/_portfolio_cards.scss
@@ -10,7 +10,8 @@
     transition: transform;
 
     transition-duration: 250ms;
-    transition-timing-function: $cubic &-header {
+    transition-timing-function: $cubic;
+    &-header {
       color: $project-black;
       font-weight: 700;
       font-size: 18px;
