--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -6,4 +6,6 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   transition: transform 0.25s;
+  transform: scale(1);
+  transition-timing-function: $cubic;
 }
