--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,3 +15,4 @@
 @import "./components/modal";
 @import "./components/container";
 @import "./components/services";
+@import "./components/mobile-menu";
