--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -162,7 +162,7 @@
     box-sizing: border-box;
     background-color: $background;
     line-height: 1.25;
-    width: 290px;
+    width: 100%;
     padding: 14px 0 14px 16px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
