--- a/sass/components/_portfolio_cards.scss
+++ b/sass/components/_portfolio_cards.scss
@@ -3,7 +3,7 @@
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
-    margin: 0;
+    margin: 0 auto;
 
     color: $grey;
     background: $white;
